--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 .rightColumn {
     width: 100%;
     height: 100%;
-    background-image: url(/images/image-header-desktop.jpg);
+    background-image: url(https://raw.githubusercontent.com/barbaradamasdev/Stats-preview-card-component/main/images/image-header-desktop.jpg);
     background-color: var(--accentViolet);
     background-blend-mode: multiply;
     border-radius: 0 10px 10px 0;  
